k8s/memos/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: memos
  template:
    metadata:
      labels:
        app: memos
    spec:
      dnsPolicy: ClusterFirst
      containers:
        - name: memos
          image: neosmemo/memos:latest@sha256:d92b2c5dd6eb064cfb22c8a81a0a70b1c7a1d09068b30ddccd5e9d92cb6e300a
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5230
              protocol: TCP
          volumeMounts:
            - name: memos-volume
              mountPath: /var/opt/memos
      volumes:
        - name: memos-volume
          persistentVolumeClaim:
            claimName: memos-pvc
