k8s/memos/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: 'kube-system-https-redirect@kubernetescrd'
spec:
  ingressClassName: traefik
  rules:
    - host: memos.tryrocket.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: memos
                port:
                  name: http
  tls:
    - hosts:
        - memos.tryrocket.cloud
      secretName: memos-tryrocket-cloud-production-tls
